# tselements

./: CMakeLists.txt  LICENSE  editor_todo.txt  font_brainstorm.txt  future_todo.txt  major_todo.txt  proj.cppcheck  todo.txt  todo_editor.txt  todo_new.txt  track_brainstorm.txt  ui_brainstorm.txt
assets/cars/: cardef.car_  f1.car  porge.car
assets/data/: grass.dds  terold.ter  terrains.ter  tiles.til
assets/fonts/: default_font_18px.fnt  default_font_20px.fnt  default_font_24px.fnt  default_font_32px.fnt  extra_bold_32px.fnt
dependencies/chipmunk-7.0.2/: CMakeLists.txt
dependencies/chipmunk-7.0.2/src/: CMakeLists.txt
src/: editor_main.cpp  editor_main_3d.cpp  main.cpp  stdinc.cpp  stdinc.hpp  ts-elements.smproj
src/audio/: sound_playback_controller.cpp  sound_playback_controller.hpp  sound_sample.cpp  sound_sample.hpp  sound_sample_loader.cpp  sound_sample_loader.hpp
src/client/: action_state.cpp  action_state.hpp  client.cpp  client.hpp  client_action_essentials.hpp  client_action_essentials_detail.hpp  client_action_interface.hpp  client_action_interface_detail.hpp  client_action_message_forwarder.hpp  client_action_message_forwarder_detail.hpp  client_base.cpp  client_base.hpp  client_base_detail.hpp  client_cup.hpp  client_cup.inl  client_cup_essentials.hpp  client_cup_essentials_detail.hpp  client_message_conveyor.cpp  client_message_conveyor.hpp  client_message_dispatcher.hpp  client_message_forwarder.hpp  client_message_forwarder_detail.hpp  client_message_fwd.hpp  client_messages.hpp  client_race_hud.cpp  client_race_hud.hpp  client_scene_loader.cpp  client_scene_loader.hpp  client_viewport_arrangement.cpp  client_viewport_arrangement.hpp  control_event_translator.cpp  control_event_translator.hpp  control_event_translator_detail.hpp  cup_state_interface.hpp  key_settings.cpp  key_settings.hpp  local_client.cpp  local_client.hpp  local_message_dispatcher.cpp  local_message_dispatcher.hpp  (+8 more)
src/components/: generic_state.hpp  generic_state_machine.hpp  generic_state_machine.inl
src/controls/: control.hpp  control_center.cpp  control_center.hpp  control_event.hpp  controllable.cpp  controllable.hpp  key_mapping.hpp
src/core/: config.hpp  config_definitions.hpp  subsystem_initialization.cpp  subsystem_initialization.hpp
src/cup/: car_mode.hpp  cup.cpp  cup.hpp  cup_controller.hpp  cup_controller_detail.hpp  cup_listener.hpp  cup_message_fwd.hpp  cup_messages.cpp  cup_messages.hpp  cup_settings.hpp  cup_state.hpp  cup_synchronizer.cpp  cup_synchronizer.hpp  player_definition.hpp
src/editor/: car_editor.cpp  car_editor.hpp  editor_action_history.cpp  editor_action_history.hpp  editor_context.cpp  editor_context.hpp  editor_interface_state.cpp  editor_interface_state.hpp  editor_mode.hpp  editor_mode_types.hpp  editor_scene.cpp  editor_scene.hpp  editor_state.cpp  editor_state.hpp  editor_test_state.cpp  editor_test_state.hpp  editor_tool.hpp  editor_tool_types.hpp  editor_working_state.cpp  editor_working_state.hpp  height_map.cpp  height_map.hpp  height_map_shaders.hpp  model_3d.hpp  path_vertices.cpp  path_vertices.hpp  path_vertices_detail.hpp  render_scene_3d.cpp  render_scene_3d.hpp  scene_3d_shaders.hpp  scene_loader_3d.cpp  scene_loader_3d.hpp  terrain_interface_shaders.hpp  terrain_model_3d.cpp  terrain_model_3d.hpp  terrain_model_3d_detail.hpp  terrain_scene_3d.cpp  terrain_scene_3d.hpp  test_settings.hpp  test_state_essentials.cpp  (+21 more)
src/editor_3d/: editor_context_3d.hpp  editor_path_designer_3d.cpp  editor_path_designer_3d.hpp  editor_scene_3d.cpp  editor_scene_3d.hpp  editor_state_3d.cpp  editor_state_3d.hpp  editor_tool_3d.hpp  editor_tool_state_3d.cpp  editor_tool_state_3d.hpp  editor_tool_types_3d.hpp  screen_space_3d.cpp  screen_space_3d.hpp  working_state_3d.hpp
src/fonts/: bitmap_font.cpp  bitmap_font.hpp  builtin_fonts.hpp  font_library.cpp  font_library.hpp  font_renderer.cpp  font_renderer.hpp  text_geometry.cpp  text_geometry.hpp  text_shaders.hpp  text_vertex_buffer.cpp  text_vertex_buffer.hpp
src/game/: game_context.hpp  game_events.hpp  game_state.hpp  loading_thread.cpp  loading_thread.hpp  loading_thread_detail.hpp  main_loop.cpp  main_loop.hpp  process_priority.cpp  process_priority.hpp
src/graphics/: buffer.hpp  geometry.cpp  geometry.hpp  geometry_renderer.cpp  geometry_renderer.hpp  geometry_shaders.hpp  gl_check.cpp  gl_check.hpp  gl_context.cpp  gl_context.hpp  gl_scissor_box.hpp  glm_library.cpp  image.cpp  image.hpp  image_loader.hpp  render_window.cpp  render_window.hpp  sampler.hpp  shader.cpp  shader.hpp  text_shader.cpp  text_shader.hpp  texture.cpp  texture.hpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/imgui/: imconfig.h  imgui_default_style.cpp  imgui_default_style.hpp  imgui_guards.hpp  imgui_sfml_opengl.cpp  imgui_sfml_opengl.hpp
src/menu/: main_menu.cpp  main_menu.hpp  main_menu_state.cpp  main_menu_state.hpp  update_input_state.cpp  update_input_state.hpp
src/messages/: message_conveyor.hpp  message_traits.hpp  message_view.hpp
src/race/: lap_tracker.cpp  lap_tracker.hpp  race.cpp  race.hpp  race_messages.hpp
src/resources/: car_definition.hpp  car_description.cpp  car_description.hpp  car_hash.cpp  car_hash.hpp  car_loader.cpp  car_loader.hpp  car_store.cpp  car_store.hpp  collision_mask.cpp  collision_mask.hpp  collision_mask_detail.hpp  collision_shape.hpp  color_scheme.hpp  control_point.hpp  default_start_points.hpp  geometry.hpp  handling.hpp  handling_properties.hpp  include_path.cpp  include_path.hpp  path_library.cpp  path_library.hpp  pattern.cpp  pattern.hpp  pattern_builder.cpp  pattern_builder.hpp  pattern_loader.cpp  pattern_loader.hpp  pattern_store.cpp  pattern_store.hpp  resource_library_interface.hpp  resource_store.cpp  resource_store.hpp  (+28 more)
tests/: CMakeLists.txt  bezier_curves.cpp  car_loading.cpp  collision_mask.cpp  cup_infrastructure.cpp  main.cpp  state_machine.cpp  texture_atlas.cpp  track_loading.cpp  track_scene_geometry.cpp
tests/assets/data/: oldtiles.til  terrains.ter  tiles2.til
tests/assets/tracks/: banaring.trk  custom_tiles.til  test.trk
(+239 files in other folders)
